# self_blog

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.py
self_blog/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
self_blog/static/: views.py
self_blog/static/management/commands/: runserver.py
self_blog/static/self_blog/: README.md  package.json  vue.config.js
self_blog/static/self_blog/public/: index.html
self_blog/static/self_blog/src/: App.vue  main.js
self_blog/static/self_blog/src/components/common/: NavBar.vue  NavLink.vue  PrimaryButton.vue
self_blog/static/self_blog/src/plugins/: vuetify.js
self_blog/static/self_blog/src/router/: index.js
self_blog/static/self_blog/src/styles/: colors.scss  fonts.scss
self_blog/static/self_blog/src/views/: Blog.vue  Home.vue
