[tool.poetry]
name = "self_blog"
version = "0.1.0"
description = ""
authors = ["Phuoc Bao <baohp@hybrid-technologies.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
python-dotenv = "^0.14.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
filelock = "^3.0.12"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
